parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    COMMA
    FALSE
    LSQUAREB
    RSQUAREB
    TRUE

Grammar

Rule 0     S' -> main
Rule 1     main -> INT MAIN LPAREN RPAREN scope
Rule 2     scope -> LBRAKETS statement RBRAKETS
Rule 3     scope -> LBRAKETS expression RBRAKETS
Rule 4     expression -> expression PLUS expression
Rule 5     expression -> expression MINUS expression
Rule 6     expression -> expression TIMES expression
Rule 7     expression -> expression DIVIDE expression
Rule 8     expression -> LPAREN expression RPAREN
Rule 9     expression -> term
Rule 10    term -> type ID
Rule 11    type -> INT
Rule 12    type -> FLOAT
Rule 13    type -> STRING
Rule 14    return -> RETURN expression SEMICOLON
Rule 15    return -> RETURN SEMICOLON
Rule 16    adress -> term ADRESS expression SEMICOLON
Rule 17    adress -> term ADRESS term SEMICOLON
Rule 18    adress -> term ADRESS NUMBER SEMICOLON
Rule 19    adress -> term ADRESS LITSTRING SEMICOLON
Rule 20    condition -> expression OR expression
Rule 21    condition -> expression NOT expression
Rule 22    condition -> expression AND expression
Rule 23    condition -> expression EQUAL expression
Rule 24    condition -> condition OR condition
Rule 25    condition -> condition NOT condition
Rule 26    condition -> condition AND condition
Rule 27    condition -> expression NOTEQUAL expression
Rule 28    condition -> expression GREATER expression
Rule 29    condition -> expression LESS expression
Rule 30    condition -> expression GREATEREQUAL expression
Rule 31    condition -> expression LESSEQUAL expression
Rule 32    condition -> LPAREN condition RPAREN
Rule 33    condition -> NOT condition
Rule 34    statement -> expression SEMICOLON
Rule 35    statement -> if
Rule 36    statement -> else
Rule 37    statement -> for
Rule 38    statement -> while
Rule 39    statement -> print
Rule 40    statement -> adress
Rule 41    statement -> return
Rule 42    if -> IF LPAREN condition RPAREN scope
Rule 43    if -> if elseif
Rule 44    if -> if else
Rule 45    elseif -> ELSEIF LPAREN condition RPAREN scope
Rule 46    elseif -> elseif elseif
Rule 47    elseif -> elseif else
Rule 48    else -> ELSE scope
Rule 49    print -> PRINT LPAREN LITSTRING RPAREN SEMICOLON
Rule 50    print -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 51    term -> factor
Rule 52    factor -> NUMBER
Rule 53    factor -> LPAREN expression RPAREN
Rule 54    for -> FOR LPAREN for_initilizer SEMICOLON condition SEMICOLON expression RPAREN scope
Rule 55    for_initilizer -> adress
Rule 56    while -> WHILE LPAREN condition RPAREN scope

Terminals, with rules where they appear

ADRESS               : 16 17 18 19
AND                  : 22 26
BOOL                 : 
COMMA                : 
DIVIDE               : 7
ELSE                 : 48
ELSEIF               : 45
EQUAL                : 23
FALSE                : 
FLOAT                : 12
FOR                  : 54
GREATER              : 28
GREATEREQUAL         : 30
ID                   : 10
IF                   : 42
INT                  : 1 11
LBRAKETS             : 2 3
LESS                 : 29
LESSEQUAL            : 31
LITSTRING            : 19 49
LPAREN               : 1 8 32 42 45 49 50 53 54 56
LSQUAREB             : 
MAIN                 : 1
MINUS                : 5
NOT                  : 21 25 33
NOTEQUAL             : 27
NUMBER               : 18 52
OR                   : 20 24
PLUS                 : 4
PRINT                : 49 50
RBRAKETS             : 2 3
RETURN               : 14 15
RPAREN               : 1 8 32 42 45 49 50 53 54 56
RSQUAREB             : 
SEMICOLON            : 14 15 16 17 18 19 34 49 50 54 54
STRING               : 13
TIMES                : 6
TRUE                 : 
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

adress               : 40 55
condition            : 24 24 25 25 26 26 32 33 42 45 54 56
else                 : 36 44 47
elseif               : 43 46 46 47
expression           : 3 4 4 5 5 6 6 7 7 8 14 16 20 20 21 21 22 22 23 23 27 27 28 28 29 29 30 30 31 31 34 50 53 54
factor               : 51
for                  : 37
for_initilizer       : 54
if                   : 35 43 44
main                 : 0
print                : 39
return               : 41
scope                : 1 42 45 48 54 56
statement            : 2
term                 : 9 16 17 17 18 19
type                 : 10
while                : 38

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . INT MAIN LPAREN RPAREN scope

    INT             shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> INT . MAIN LPAREN RPAREN scope

    MAIN            shift and go to state 3


state 3

    (1) main -> INT MAIN . LPAREN RPAREN scope

    LPAREN          shift and go to state 4


state 4

    (1) main -> INT MAIN LPAREN . RPAREN scope

    RPAREN          shift and go to state 5


state 5

    (1) main -> INT MAIN LPAREN RPAREN . scope
    (2) scope -> . LBRAKETS statement RBRAKETS
    (3) scope -> . LBRAKETS expression RBRAKETS

    LBRAKETS        shift and go to state 7

    scope                          shift and go to state 6

state 6

    (1) main -> INT MAIN LPAREN RPAREN scope .

    $end            reduce using rule 1 (main -> INT MAIN LPAREN RPAREN scope .)


state 7

    (2) scope -> LBRAKETS . statement RBRAKETS
    (3) scope -> LBRAKETS . expression RBRAKETS
    (34) statement -> . expression SEMICOLON
    (35) statement -> . if
    (36) statement -> . else
    (37) statement -> . for
    (38) statement -> . while
    (39) statement -> . print
    (40) statement -> . adress
    (41) statement -> . return
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (42) if -> . IF LPAREN condition RPAREN scope
    (43) if -> . if elseif
    (44) if -> . if else
    (48) else -> . ELSE scope
    (54) for -> . FOR LPAREN for_initilizer SEMICOLON condition SEMICOLON expression RPAREN scope
    (56) while -> . WHILE LPAREN condition RPAREN scope
    (49) print -> . PRINT LPAREN LITSTRING RPAREN SEMICOLON
    (50) print -> . PRINT LPAREN expression RPAREN SEMICOLON
    (16) adress -> . term ADRESS expression SEMICOLON
    (17) adress -> . term ADRESS term SEMICOLON
    (18) adress -> . term ADRESS NUMBER SEMICOLON
    (19) adress -> . term ADRESS LITSTRING SEMICOLON
    (14) return -> . RETURN expression SEMICOLON
    (15) return -> . RETURN SEMICOLON
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 17
    IF              shift and go to state 19
    ELSE            shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 22
    PRINT           shift and go to state 23
    RETURN          shift and go to state 25
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    statement                      shift and go to state 8
    expression                     shift and go to state 9
    if                             shift and go to state 10
    else                           shift and go to state 11
    for                            shift and go to state 12
    while                          shift and go to state 13
    print                          shift and go to state 14
    adress                         shift and go to state 15
    return                         shift and go to state 16
    term                           shift and go to state 18
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 8

    (2) scope -> LBRAKETS statement . RBRAKETS

    RBRAKETS        shift and go to state 31


state 9

    (3) scope -> LBRAKETS expression . RBRAKETS
    (34) statement -> expression . SEMICOLON
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression

    RBRAKETS        shift and go to state 32
    SEMICOLON       shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37


state 10

    (35) statement -> if .
    (43) if -> if . elseif
    (44) if -> if . else
    (45) elseif -> . ELSEIF LPAREN condition RPAREN scope
    (46) elseif -> . elseif elseif
    (47) elseif -> . elseif else
    (48) else -> . ELSE scope

    RBRAKETS        reduce using rule 35 (statement -> if .)
    ELSEIF          shift and go to state 40
    ELSE            shift and go to state 20

    elseif                         shift and go to state 38
    else                           shift and go to state 39

state 11

    (36) statement -> else .

    RBRAKETS        reduce using rule 36 (statement -> else .)


state 12

    (37) statement -> for .

    RBRAKETS        reduce using rule 37 (statement -> for .)


state 13

    (38) statement -> while .

    RBRAKETS        reduce using rule 38 (statement -> while .)


state 14

    (39) statement -> print .

    RBRAKETS        reduce using rule 39 (statement -> print .)


state 15

    (40) statement -> adress .

    RBRAKETS        reduce using rule 40 (statement -> adress .)


state 16

    (41) statement -> return .

    RBRAKETS        reduce using rule 41 (statement -> return .)


state 17

    (8) expression -> LPAREN . expression RPAREN
    (53) factor -> LPAREN . expression RPAREN
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 41
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 18

    (9) expression -> term .
    (16) adress -> term . ADRESS expression SEMICOLON
    (17) adress -> term . ADRESS term SEMICOLON
    (18) adress -> term . ADRESS NUMBER SEMICOLON
    (19) adress -> term . ADRESS LITSTRING SEMICOLON

    RBRAKETS        reduce using rule 9 (expression -> term .)
    SEMICOLON       reduce using rule 9 (expression -> term .)
    PLUS            reduce using rule 9 (expression -> term .)
    MINUS           reduce using rule 9 (expression -> term .)
    TIMES           reduce using rule 9 (expression -> term .)
    DIVIDE          reduce using rule 9 (expression -> term .)
    ADRESS          shift and go to state 43


state 19

    (42) if -> IF . LPAREN condition RPAREN scope

    LPAREN          shift and go to state 44


state 20

    (48) else -> ELSE . scope
    (2) scope -> . LBRAKETS statement RBRAKETS
    (3) scope -> . LBRAKETS expression RBRAKETS

    LBRAKETS        shift and go to state 7

    scope                          shift and go to state 45

state 21

    (54) for -> FOR . LPAREN for_initilizer SEMICOLON condition SEMICOLON expression RPAREN scope

    LPAREN          shift and go to state 46


state 22

    (56) while -> WHILE . LPAREN condition RPAREN scope

    LPAREN          shift and go to state 47


state 23

    (49) print -> PRINT . LPAREN LITSTRING RPAREN SEMICOLON
    (50) print -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 48


state 24

    (52) factor -> NUMBER .

    ADRESS          reduce using rule 52 (factor -> NUMBER .)
    RBRAKETS        reduce using rule 52 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 52 (factor -> NUMBER .)
    PLUS            reduce using rule 52 (factor -> NUMBER .)
    MINUS           reduce using rule 52 (factor -> NUMBER .)
    TIMES           reduce using rule 52 (factor -> NUMBER .)
    DIVIDE          reduce using rule 52 (factor -> NUMBER .)
    RPAREN          reduce using rule 52 (factor -> NUMBER .)
    OR              reduce using rule 52 (factor -> NUMBER .)
    NOT             reduce using rule 52 (factor -> NUMBER .)
    AND             reduce using rule 52 (factor -> NUMBER .)
    EQUAL           reduce using rule 52 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 52 (factor -> NUMBER .)
    GREATER         reduce using rule 52 (factor -> NUMBER .)
    LESS            reduce using rule 52 (factor -> NUMBER .)
    GREATEREQUAL    reduce using rule 52 (factor -> NUMBER .)
    LESSEQUAL       reduce using rule 52 (factor -> NUMBER .)


state 25

    (14) return -> RETURN . expression SEMICOLON
    (15) return -> RETURN . SEMICOLON
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    SEMICOLON       shift and go to state 50
    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 49
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 26

    (10) term -> type . ID

    ID              shift and go to state 51


state 27

    (51) term -> factor .

    ADRESS          reduce using rule 51 (term -> factor .)
    RBRAKETS        reduce using rule 51 (term -> factor .)
    SEMICOLON       reduce using rule 51 (term -> factor .)
    PLUS            reduce using rule 51 (term -> factor .)
    MINUS           reduce using rule 51 (term -> factor .)
    TIMES           reduce using rule 51 (term -> factor .)
    DIVIDE          reduce using rule 51 (term -> factor .)
    RPAREN          reduce using rule 51 (term -> factor .)
    OR              reduce using rule 51 (term -> factor .)
    NOT             reduce using rule 51 (term -> factor .)
    AND             reduce using rule 51 (term -> factor .)
    EQUAL           reduce using rule 51 (term -> factor .)
    NOTEQUAL        reduce using rule 51 (term -> factor .)
    GREATER         reduce using rule 51 (term -> factor .)
    LESS            reduce using rule 51 (term -> factor .)
    GREATEREQUAL    reduce using rule 51 (term -> factor .)
    LESSEQUAL       reduce using rule 51 (term -> factor .)


state 28

    (11) type -> INT .

    ID              reduce using rule 11 (type -> INT .)


state 29

    (12) type -> FLOAT .

    ID              reduce using rule 12 (type -> FLOAT .)


state 30

    (13) type -> STRING .

    ID              reduce using rule 13 (type -> STRING .)


state 31

    (2) scope -> LBRAKETS statement RBRAKETS .

    $end            reduce using rule 2 (scope -> LBRAKETS statement RBRAKETS .)
    RBRAKETS        reduce using rule 2 (scope -> LBRAKETS statement RBRAKETS .)
    ELSEIF          reduce using rule 2 (scope -> LBRAKETS statement RBRAKETS .)
    ELSE            reduce using rule 2 (scope -> LBRAKETS statement RBRAKETS .)


state 32

    (3) scope -> LBRAKETS expression RBRAKETS .

    $end            reduce using rule 3 (scope -> LBRAKETS expression RBRAKETS .)
    RBRAKETS        reduce using rule 3 (scope -> LBRAKETS expression RBRAKETS .)
    ELSEIF          reduce using rule 3 (scope -> LBRAKETS expression RBRAKETS .)
    ELSE            reduce using rule 3 (scope -> LBRAKETS expression RBRAKETS .)


state 33

    (34) statement -> expression SEMICOLON .

    RBRAKETS        reduce using rule 34 (statement -> expression SEMICOLON .)


state 34

    (4) expression -> expression PLUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 52
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 35

    (5) expression -> expression MINUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 53
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 36

    (6) expression -> expression TIMES . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 54
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 37

    (7) expression -> expression DIVIDE . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 55
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 38

    (43) if -> if elseif .
    (46) elseif -> elseif . elseif
    (47) elseif -> elseif . else
    (45) elseif -> . ELSEIF LPAREN condition RPAREN scope
    (46) elseif -> . elseif elseif
    (47) elseif -> . elseif else
    (48) else -> . ELSE scope

  ! shift/reduce conflict for ELSEIF resolved as shift
  ! shift/reduce conflict for ELSE resolved as shift
    RBRAKETS        reduce using rule 43 (if -> if elseif .)
    ELSEIF          shift and go to state 40
    ELSE            shift and go to state 20

  ! ELSEIF          [ reduce using rule 43 (if -> if elseif .) ]
  ! ELSE            [ reduce using rule 43 (if -> if elseif .) ]

    elseif                         shift and go to state 56
    else                           shift and go to state 57

state 39

    (44) if -> if else .

    ELSEIF          reduce using rule 44 (if -> if else .)
    ELSE            reduce using rule 44 (if -> if else .)
    RBRAKETS        reduce using rule 44 (if -> if else .)


state 40

    (45) elseif -> ELSEIF . LPAREN condition RPAREN scope

    LPAREN          shift and go to state 58


state 41

    (8) expression -> LPAREN expression . RPAREN
    (53) factor -> LPAREN expression . RPAREN
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 59
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37


state 42

    (9) expression -> term .

    RPAREN          reduce using rule 9 (expression -> term .)
    PLUS            reduce using rule 9 (expression -> term .)
    MINUS           reduce using rule 9 (expression -> term .)
    TIMES           reduce using rule 9 (expression -> term .)
    DIVIDE          reduce using rule 9 (expression -> term .)
    SEMICOLON       reduce using rule 9 (expression -> term .)
    RBRAKETS        reduce using rule 9 (expression -> term .)
    OR              reduce using rule 9 (expression -> term .)
    NOT             reduce using rule 9 (expression -> term .)
    AND             reduce using rule 9 (expression -> term .)
    EQUAL           reduce using rule 9 (expression -> term .)
    NOTEQUAL        reduce using rule 9 (expression -> term .)
    GREATER         reduce using rule 9 (expression -> term .)
    LESS            reduce using rule 9 (expression -> term .)
    GREATEREQUAL    reduce using rule 9 (expression -> term .)
    LESSEQUAL       reduce using rule 9 (expression -> term .)


state 43

    (16) adress -> term ADRESS . expression SEMICOLON
    (17) adress -> term ADRESS . term SEMICOLON
    (18) adress -> term ADRESS . NUMBER SEMICOLON
    (19) adress -> term ADRESS . LITSTRING SEMICOLON
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 62
    LITSTRING       shift and go to state 63
    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30

    term                           shift and go to state 60
    expression                     shift and go to state 61
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 44

    (42) if -> IF LPAREN . condition RPAREN scope
    (20) condition -> . expression OR expression
    (21) condition -> . expression NOT expression
    (22) condition -> . expression AND expression
    (23) condition -> . expression EQUAL expression
    (24) condition -> . condition OR condition
    (25) condition -> . condition NOT condition
    (26) condition -> . condition AND condition
    (27) condition -> . expression NOTEQUAL expression
    (28) condition -> . expression GREATER expression
    (29) condition -> . expression LESS expression
    (30) condition -> . expression GREATEREQUAL expression
    (31) condition -> . expression LESSEQUAL expression
    (32) condition -> . LPAREN condition RPAREN
    (33) condition -> . NOT condition
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 64
    NOT             shift and go to state 67
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    condition                      shift and go to state 65
    expression                     shift and go to state 66
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 45

    (48) else -> ELSE scope .

    RBRAKETS        reduce using rule 48 (else -> ELSE scope .)
    ELSEIF          reduce using rule 48 (else -> ELSE scope .)
    ELSE            reduce using rule 48 (else -> ELSE scope .)


state 46

    (54) for -> FOR LPAREN . for_initilizer SEMICOLON condition SEMICOLON expression RPAREN scope
    (55) for_initilizer -> . adress
    (16) adress -> . term ADRESS expression SEMICOLON
    (17) adress -> . term ADRESS term SEMICOLON
    (18) adress -> . term ADRESS NUMBER SEMICOLON
    (19) adress -> . term ADRESS LITSTRING SEMICOLON
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24
    LPAREN          shift and go to state 68

    for_initilizer                 shift and go to state 69
    adress                         shift and go to state 70
    term                           shift and go to state 71
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 47

    (56) while -> WHILE LPAREN . condition RPAREN scope
    (20) condition -> . expression OR expression
    (21) condition -> . expression NOT expression
    (22) condition -> . expression AND expression
    (23) condition -> . expression EQUAL expression
    (24) condition -> . condition OR condition
    (25) condition -> . condition NOT condition
    (26) condition -> . condition AND condition
    (27) condition -> . expression NOTEQUAL expression
    (28) condition -> . expression GREATER expression
    (29) condition -> . expression LESS expression
    (30) condition -> . expression GREATEREQUAL expression
    (31) condition -> . expression LESSEQUAL expression
    (32) condition -> . LPAREN condition RPAREN
    (33) condition -> . NOT condition
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 64
    NOT             shift and go to state 67
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    condition                      shift and go to state 72
    expression                     shift and go to state 66
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 48

    (49) print -> PRINT LPAREN . LITSTRING RPAREN SEMICOLON
    (50) print -> PRINT LPAREN . expression RPAREN SEMICOLON
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . term
    (10) term -> . type ID
    (51) term -> . factor
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . STRING
    (52) factor -> . NUMBER
    (53) factor -> . LPAREN expression RPAREN

    LITSTRING       shift and go to state 73
    LPAREN          shift and go to state 17
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    NUMBER          shift and go to state 24

    expression                     shift and go to state 74
    term                           shift and go to state 42
    type                           shift and go to state 26
    factor                         shift and go to state 27

state 49

    (14) return -> RETURN expression . SEMICOLON
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 75
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37


state 50

    (15) return -> RETURN SEMICOLON .

    RBRAKETS        reduce using rule 15 (return -> RETURN SEMICOLON .)


state 51

    (10) term -> type ID .
